clang/test/BSC/Negative/Trait/r1/definition_5/definition_5.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this, int a);
};

trait F* bar(trait F* i, int a) {
  i->foo(42);
  return i;
}

struct S{
  int x;
};

impl trait F for struct S; // expected-error {{function 'foo' in 'trait F' is not implemented for 'struct S'}} 

int main() {
  struct S s1 = { .x = 42 };
  return 1;
};
